--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@ngneat/transloco": "^4.0.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "rxjs": "~7.5.0",
